syntax = "proto3";

package protobuf;

option go_package = ".;protobuf";

message ComboLeg {
    optional int32 conId = 1;
    optional int32 ratio = 2;
    optional string action = 3;
    optional string exchange = 4;
    optional int32 openClose = 5;
    optional int32 shortSalesSlot = 6;
    optional string designatedLocation = 7;
    optional int32 exemptCode = 8;
    optional double perLegPrice = 9;
}
